test-pods-yaml/nieuwe/apache/apache-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  annotations:
    deployment.kubernetes.io/revision: '2'
  creationTimestamp: '2023-05-23T12:45:08Z'
  generation: 3
  labels:
    app: apache-deployment
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:field.cattle.io/publicEndpoints: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
              f:namespace: {}
            f:spec:
              f:containers:
                k:{"name":"apache-deployment"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"LARAVEL_APP_ENV"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_APP_NAME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_CONNECTION"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_DATABASE"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_HOST"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_PASSWORD"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"LARAVEL_DB_USERNAME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":8000,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:hostPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/app"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"app-data"}:
                  .: {}
                  f:name: {}
                  f:persistentVolumeClaim:
                    .: {}
                    f:claimName: {}
      manager: agent
      operation: Update
      time: '2023-05-23T12:48:55Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      subresource: status
      time: '2023-05-23T12:48:56Z'
  resourceVersion: '6020'
  uid: bb67577e-a7da-4558-976d-427b2fe0ccd3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: apache-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apache-deployment
    spec:
      containers:
        - env:
            - name: LARAVEL_APP_NAME
              value: MyLaravelApp
            - name: LARAVEL_APP_ENV
              value: production
            - name: LARAVEL_DB_CONNECTION
              value: mysql
            - name: LARAVEL_DB_HOST
              value: db
            - name: LARAVEL_DB_PORT
              value: '3306'
            - name: LARAVEL_DB_DATABASE
              value: 2022-ProjectPHP-202
            - name: LARAVEL_DB_USERNAME
              value: root
            - name: LARAVEL_DB_PASSWORD
              value: root
          image: bitnami/laravel
          imagePullPolicy: Always
          name: apache-deployment
          ports:
            - containerPort: 8000
              hostPort: 8000
              name: 8000tcp8000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /app
              name: app-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: apache-pvc
